--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+body {
+	height: 100%;
+}
 #user-window {
   width: 312px;
   border: 1px solid black;
@@ -87,12 +90,14 @@
   display: table-cell;
   width: 460px;
   height: 660px;
-  bottom: 0;
   left: 10px;
+  bottom:10%;
   vertical-align: bottom;
 }
 #chat > .container {
+  position:absolute;
   display: inline-block;
+  bottom:60px;
   max-height: 600px;
   overflow-y: auto;
   overflow-x: hidden;
@@ -112,9 +117,11 @@
   order: -1;
   flex-shrink: 0;
   height: 60px;
+  bottom: 0;
   word-break: break-word;
 }
 #chat .field-container.for-input {
+  position: absolute;
   order: 1;
   padding-bottom: 0;
   padding-top: 0;
